maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:38: error: ';' expected but ')' found.
		while( (isDirectionFree() && virage%4==0)) || (virage%4!=0 && !isDirectionFree()) )
                                                                                                  ^